Fix installer wizards css, minor css refactoring.
Forgot to change the installer layout along with the default layout in
the last commit. When the default layout's css classes and id changed,
the installer layout didn't pick up the change so looked messed up.

Added a "good" flash message box. It has a green border/text instead of
the more dire looking red of the regular flash message.

Also some CSS consolidation to remove extra tags.

--- a/app/webroot/css/install.css
+++ b/app/webroot/css/install.css
@@ -73,7 +73,6 @@ div.install
 .install .text label, .install .password label, .install .textarea label
 {
 	width: 13em;
-	padding-right: 1em;
 }
 
 .install .text input, .install .password input, .install .textarea textarea
